# veles.sound_feature_extraction

./: .autotools  .cproject  .gitignore  .gitmodules  .project  .pydevproject  Makefile.am  Makefile.common  README.md  TRANSFORMS.md  autogen.sh  common.ac  configure.ac  fullcheck.sh  fullcheck_xml.sh  project.config  spfextr.pc.in
docs/: Doxyfile.in  Makefile.am
inc/: Makefile.am
inc/SoundFeatureExtraction/: api.h
inc/boost/algorithm/string/detail/: finder.hpp
inc/boost/regex/v4/: regex_format.hpp
inc/sound_feature_extraction/: api.h
inc/spfextr/: api.h
python/sound_feature_extraction/: explorer.py  extractor.py  feature.py  features_xml.py  formatters.py  library.py  transform.py
python/spfextr/: explorer.py  extractor.py  features.py  library.py  transform.py
python/tests/: explorer.py  extractor.py  test_explorer.py  test_extractor.py
src/: Makefile.am  Makefile.in  api.cc  attributes.h  buffer_format.cc  buffer_format.h  buffers.cc  buffers.h  buffers_base.h  config.h.in  demangle.cc  demangle.h  exceptions.h  features_parser.cc  features_parser.h  floatptr.h  format_converter.cc  format_converter.h  format_converter_base.h  logger.cc  logger.h  make_unique.h  memory_protector.cc  memory_protector.h  omp_transform_base.h  parameterizable.cc  parameterizable.h  parameterizable_base.cc  parameterizable_base.h  parameters.cc  parameters.h  parameters_base.cc  parameters_base.h  parameters_parser.cc  safe_omp.h  simd_aware.cc  simd_aware.h  speech_features.cc  speech_features.h  stoi_function.h  (+8 more)
src/allocators/: Makefile.am  Makefile.in  buffers_allocator.cc  buffers_allocator.h  sliding_blocks_allocator.cc  sliding_blocks_allocator.h  sliding_blocks_impl.cc  sliding_blocks_impl.h  worst_allocator.cc  worst_allocator.h
src/boost/: Jamroot  Makefile.am  Makefile.in  user-config.jam.in
src/formats/: Makefile.am  Makefile.in  array_format.h  array_format_converter_base.h  fixed_array.h  float_to_int16.cc  float_to_int16.h  float_to_int32.cc  float_to_int32.h  format_limits.h  int16_to_float.cc  int16_to_float.h  int16_to_int32.cc  int16_to_int32.h  int32_to_float.cc  int32_to_float.h  int32_to_int16.cc  int32_to_int16.h  raw_format.cc  raw_format.h  raw_format_converter_base.h  raw_window_format.cc  raw_window_format.h  single_converters.cc  single_converters.h  single_format.h  window_format.cc  window_format.h  window_format_converter_base.h
src/primitives/: Makefile.am  Makefile.in  arithmetic-inl.h  arithmetic.h  avx_extra.c  avx_extra.h  avx_mathfun.h  coiflets.c  coiflets.h  convolute.c  convolute.h  daubechies.c  daubechies.h  double2float.py  energy.c  energy.h  lpc.c  lpc.h  lsp.c  lsp.h  memory.c  memory.h  neon_mathfun.h  symlets.c  symlets.h  wavelet.c  wavelet.h  wavelet_filter_bank.cc  wavelet_filter_bank.h  wavelet_types.h  window.cc  window.h
src/transforms/: Makefile.am  Makefile.in  argminmax.cc  argminmax.h  autocorrelation.cc  autocorrelation.h  bandpass_filter.cc  bandpass_filter.h  beat.cc  beat.h  beat_dynamic_programming.cc  beat_dynamic_programming.h  centroid.cc  centroid.h  common.cc  common.h  complex_magnitude.cc  complex_magnitude.h  complex_magnitude_squared.cc  complex_magnitude_squared.h  complex_to_real.cc  complex_to_real.h  convolve.cc  convolve.h  dct.cc  dct.h  delta.cc  delta.h  dft.cc  dft.h  diff.cc  diff.h  diffrect.cc  diffrect.h  dwpt.cc  dwpt.h  energy.cc  energy.h  filter_bank.cc  filter_bank.h  (+101 more)
tests/: Makefile.am  Makefile.in  Tests.make  all_features.cc  api.cc  crp.cc  dspfilters_simd.cc  features_parser.cc  mfcc.cc  musical_surface.cc  parameters.cc  sbc.cc  sfm.cc  speech_features.cc  speech_sample.inc  tempo.cc  transform_tree.cc  vad.cc  wpp.cc
tests/allocators/: Makefile.am  Makefile.in  buffers_allocator.cc  sliding_blocks_allocator.cc  worst_allocator.cc
tests/google/: Makefile.am  Makefile.in
tests/google/gtest/: gtest-printers.h
tests/google/gtest/internal/: gtest-internal.h  gtest-port.h
tests/primitives/: Makefile.am  Makefile.in  arithmetic.cc  convolute.cc  energy.cc  lpc.cc  lsp.cc  memory.cc  wavelet.cc  wavelet_filter_bank.cc  window.cc
tests/transforms/: Makefile.am  Makefile.in  argminmax.cc  autocorrelation.cc  bandpass_filter.cc  beat.cc  beat_test.inc  benchmark.inc  centroid.cc  complex_magnitude.cc  complex_magnitude_squared.cc  complex_to_real.cc  convolve.cc  dct.cc  delta.cc  diff.cc  diffrect.cc  dwpt.cc  energy.cc  filter_bank.cc  flux.cc  fork.cc  frequency_bands.cc  hamming_window_filter.cc  highpass_filter.cc  hps.cc  hps_test.inc  identity.cc  intensity.cc  log.cc  lowpass_filter.cc  lpc_cc.cc  magnitude.cc  mean.cc  mix_stereo.cc  pass_signal.inc  peak_analysis.cc  peak_detection.cc  preemphasis.cc  rasta.cc  (+21 more)
