include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = lib_transforms.la

lib_transforms_la_SOURCES = window.cc \
fir_filter_base.cc lowpass_filter.cc highpass_filter.cc bandpass_filter.cc  \
square.cc rdft.cc dct.cc complex_magnitude.cc complex_magnitude_squared.cc filter_bank.cc \
log.cc real_to_complex.cc unpack_rdft.cc

lib_transforms_la_CPPFLAGS =