include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = lib_transforms.la

lib_transforms_la_SOURCES = window.cc \
fir_filter_base.cc lowpass_filter.cc highpass_filter.cc bandpass_filter.cc  \
square.cc rdft.cc dct.cc complex_magnitude.cc spectral_energy.cc filter_bank.cc \
log.cc real_to_complex.cc unpack_rdft.cc intensity.cc dwpt.cc subband_energy.cc \
zero_padding.cc selector.cc hps.cc fork.cc complex_to_real.cc rectify.cc \
frequency_bands.cc diffrect.cc mean.cc sfm.cc argminmax.cc energy.cc \
centroid.cc zerocrossings.cc rolloff.cc flux.cc beat.cc

lib_transforms_la_CPPFLAGS =