TESTS = lowpass_filter square complex_magnitude log filter_bank \
spectral_energy real_to_complex unpack_rdft intensity rdft dct dwpt \
subband_energy zero_padding selector hps window fork complex_to_real \
rectify frequency_bands diffrect mean argminmax centroid zerocrossings \
rolloff

include $(top_srcdir)/tests/Tests.make
