TESTS = lowpass_filter square complex_magnitude log filter_bank \
spectral_energy real_to_complex unpack_rdft intensity rdft dct dwpt \
subband_energy zero_padding selector shc window fork complex_to_real \
rectify frequency_bands diff mean argminmax centroid zerocrossings \
rolloff flux autocorrelation delta short_time_msn preemphasis stats beat \
window_splitter convolve highpass_filter bandpass_filter mix_stereo \
peak_detection peak_analysis identity

include $(top_srcdir)/tests/Tests.make
