TESTS = lowpass_filter square complex_magnitude log filter_bank \
spectral_energy real_to_complex unpack_rdft rdft dct dwpt stretch \
subband_energy zero_padding selector shc window fork complex_to_real \
rectify frequency_bands diff mean centroid zerocrossings \
rolloff flux autocorrelation delta short_time_msn preemphasis stats beat \
window_splitter convolve highpass_filter bandpass_filter mix_stereo \
peak_detection peak_analysis identity lpc_cc subsampling reorder

include $(top_srcdir)/tests/Tests.make
